[project]
name = "leetstats"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Roman Glushko", email = "roman.glushko.m@gmail.com"},
]
dependencies = [
    "mkdocs-material>=9.5.49",
    "markdown>=3.7",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-git-committers-plugin-2>=2.4.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false
